[build-system]
requires = ["hatchling", "bleak"]
build-backend = "hatchling.build"

[project]
name = "jkbms_brntr"
version = "0.0.1"
authors = [
  { name="Eike Baran", email="eikebaran89@gmail.com" },
]
description = "A small example package for reading data from JK BMS via BLE"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/baranator/sampleproject"
"Bug Tracker" = "https://github.com/baranator/sampleproject/issues"
